Fixed nav text alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,7 @@ span {
   font-size: 4em;
   line-height: 1.4em;
   letter-spacing: 3px;
-  text-align: right;
+  text-align: left;
   padding: 30px 90px 30px 30px;
   margin: 60px 0;
   background: $bg-color;
